src/main/java/com/example/oms/core/error/ErrorCode.java
package com.example.oms.core.error;

public interface ErrorCode {
    String code();
    String message();
    int status();
}
